edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option cc_enable_arenas = true;
option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message PolicyCategory {
  string id = 1; // @gotags: sql:"pk"
  string name = 2; // @gotags: search:"Policy Category,store,hidden" sql:"unique"
  bool isDefault = 3;
}
